Bug 420340 - Icon shown by information panel is not updated when certain entries of places panel are clicked
Summary: Icon shown by information panel is not updated when certain entries of places...
Status: RESOLVED FIXED
Alias: None
Product: dolphin
Classification: Applications
Component: panels: information (other bugs)
Version First Reported In: unspecified
Platform: Neon Linux
: NOR normal
Target Milestone: ---
Assignee: Dolphin Bug Assignee
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2020-04-20 14:29 UTC by Patrick Silva
Modified: 2020-05-11 16:23 UTC (History)
3 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 20.08
Sentry Crash Report:


Attachments
screen recording (2.10 MB, video/webm)
2020-04-20 14:29 UTC, Patrick Silva
Details
another screen recording (1.50 MB, video/webm)
2020-05-02 13:35 UTC, Patrick Silva
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Patrick Silva 2020-04-20 14:29:33 UTC
Created attachment 127710 [details]
screen recording

SUMMARY
The icon shown by info panel is not updated when I click on certain entries of places panel. On my system the affected entries of places panel are Home, Downloads and a ntfs partition (labeled "DADOS") that I use to store personal data. 


STEPS TO REPRODUCE
1. open Dolphin
2. if information panel is disabled, enabled it by pressing F11
3. click on Trash
4. click on "Downloads", "Home" or on an additional partition under "Devices" section

OBSERVED RESULT
information panel is still showing Trash icon.
Watch the attached screen recording please.

EXPECTED RESULT
information panel should always show the correct icon

SOFTWARE/OS VERSIONS
Operating System: KDE neon Unstable Edition
KDE Plasma Version: 5.18.80
KDE Frameworks Version: 5.70.0
Qt Version: 5.14.1
Comment 1 Méven Car 2020-04-26 14:15:24 UTC
I reproduced the issue, by removing my thumbnails cache and going to folders for which a thumbnail creation would take long, because of the size of the files it contained for instance. It would be reproducible for the directories for which the previewing failed.
Comment 2 Méven Car 2020-05-01 05:51:34 UTC
Git commit dcd8c646a566eff1ff2c487fb2e7abe9a53a23cb by Méven Car.
Committed on 01/05/2020 at 05:51.
Pushed by meven into branch 'master'.

Information Panel: show early icons for folders

Summary:
Folders previews can be long to generate.
This can be noticeable by the user.

This diff displays folder icons after a 100ms timer.
FIXED-IN: 20.08

Test Plan:
rm -r ~/.cache/thumbnails/
In dolphin open trash
Click on download (or any directory with a long to generate preview).

Reviewers: #dolphin, ngraham

Reviewed By: #dolphin, ngraham

Subscribers: kfm-devel

Tags: #dolphin

Differential Revision: https://phabricator.kde.org/D29204

M  +15   -12   src/panels/information/informationpanelcontent.cpp

https://commits.kde.org/dolphin/dcd8c646a566eff1ff2c487fb2e7abe9a53a23cb
Comment 3 Patrick Silva 2020-05-02 13:35:59 UTC
Created attachment 128094 [details]
another screen recording

This issue is still reproducible when I switch from Downloads, Documents and Desktop to Home. I'm attaching a screen recording.

Operating System: KDE neon Unstable Edition
KDE Plasma Version: 5.18.80
KDE Frameworks Version: 5.70.0
Qt Version: 5.14.2
Comment 4 Méven Car 2020-05-09 17:59:57 UTC
I do reproduce.
Comment 5 Méven Car 2020-05-10 07:42:17 UTC
The second bug you mentioned is not a bug : the information panel on you screencast shows the currently selected item.
As "Documents" and "Downloads" are sub-folders of ~/ when opening "~" those folders get selected and after a small delay the details for the selection is shown.
Maybe that's an intuitive behavior but that's a different issue.
Comment 6 Patrick Silva 2020-05-11 14:09:52 UTC
(In reply to Méven Car from comment #5)
> The second bug you mentioned is not a bug : the information panel on you
> screencast shows the currently selected item.
oh, you are right.
However the current behavior seems a bit confuse to me.
When I go to the parent folder of the current one by clicking on its entry in places panel, I'm selecting such parent folder, not any of its subfolders.
I do not see the point of Dolphin to leave a subfolder selected after a click (selection) on any location present in places panel.
Comment 7 Méven Car 2020-05-11 15:28:31 UTC
(In reply to Patrick Silva from comment #6)
> (In reply to Méven Car from comment #5)
> > The second bug you mentioned is not a bug : the information panel on you
> > screencast shows the currently selected item.
> oh, you are right.
> However the current behavior seems a bit confuse to me.
> When I go to the parent folder of the current one by clicking on its entry
> in places panel, I'm selecting such parent folder, not any of its subfolders.
> I do not see the point of Dolphin to leave a subfolder selected after a
> click (selection) on any location present in places panel.

Agreed, feel free to open a new bug.
Comment 8 Patrick Silva 2020-05-11 16:23:43 UTC
done: bug 421347