Information Panel: show early icons for folders

Summary:
Folders previews can be long to generate.
This can be noticeable by the user.

This diff displays folder icons after a 100ms timer.

BUG: 420340
FIXED-IN: 20.08

Test Plan:
rm -r ~/.cache/thumbnails/
In dolphin open trash
Click on download (or any directory with a long to generate preview).

Reviewers: #dolphin, ngraham

Reviewed By: #dolphin, ngraham

Subscribers: kfm-devel

Tags: #dolphin

Differential Revision: https://phabricator.kde.org/D29204